css/contacts.css
.contacts-content {
    display: flex;
    height: 100dvh;
    max-width: 1920px;
    max-height: 1080px;
}

.body-contacts {
    max-height: 1080px;
    max-width: 1920px;
}

.display-none {
    display: none;
}

.contacts-sidebar-container {
    display: flex;
    flex-direction: column;
    width: 456px;
    min-width: 456px;
    margin-top: 96px;
    margin-left: 232px;
    padding-top: 20px;
    height: 100vh;
    height: calc(100vh - 96px) !important;
}

.contacts-sidebar-scrollbar {
    width: 100%;
    background-color: white;
    overflow-y: auto;
    scrollbar-width: thin;
    scrollbar-color: #a8a8a8 white;
    margin-top: -18px;
}

.edit-delete-contact-button {
    display: none;
}

.contact-list {
    margin-top: 90px;
    display: flex;
    align-items: center;
    flex-direction: column;
    height: auto;
}

.contact-list-fix-container {
    position: fixed;
    top: 60px;
    width: 430px;
    height: 160px;
    z-index: 3;
}

.contact-list p {
    width: 352px;
    height: 58px;
    padding-top: 17px;
    padding-bottom: 17px;
    padding-right: 36px;
    padding-left: 36px;
    font-weight: 400;
    font-size: 20px;
}

.add-new-contact-btn-container {
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 456px;
    height: 101px;
    z-index: 4;
}

.add-new-contact-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 22.5px;
    width: 352px;
    height: 56px;
    cursor: pointer;
    border: none;
    border-radius: 10px;
    background-color: rgba(42, 54, 71, 1);
    padding-top: 12px;
    padding-bottom: 12px;
    gap: 16px;
    transition: box-shadow 0.2s ease-in-out;
}

.add-new-contact-btn:hover {
    background-color: rgba(41, 171, 226, 1);
    box-shadow: -4px 4px 12px rgba(0, 0, 0, 0.3);
}

.add-new-contact-btn p {
    font-weight: 700;
    font-size: 21px;
    color: white;
}

.contact-list-seperator {
    width: 352px;
    height: 1px;
    border-radius: 3px;
    background-color: #d1d1d1;
    margin-top: 8px;
    margin-bottom: 8px;
}

.contact-card {
    width: 352px;
    height: 78px;
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 24px;
    padding-right: 24px;
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 35px;
    border-radius: 10px;
    transition: box-shadow 0.2s ease-in-out;
}

.contact-card:hover {
    background-image: linear-gradient(to bottom, #f9f9f9, #f0f0f0);
    color: black;
}

.contact-card-activated {
    background-color: rgba(42, 54, 71, 1);
    color: white;
}

.contact-profile {
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: 400;
    font-size: 12px;
    width: 42px;
    height: 42px;
    background-color: #FF7A00;
    border: 2px solid white;
    border-radius: 100%;
    color: white;
}

.contact-info {
    display: flex;
    flex-direction: column;
}

.contact-info span {
    font-weight: 400;
    font-size: 20px;
}

.contact-info a {
    cursor: pointer;
    text-decoration: none;
    color: rgba(41, 171, 226, 1);
}

.contacts-right-main-container {
    display: flex;
    flex-direction: column;
    margin-left: 24px;
    width: 1211px;
}

.contacts-side-headline {
    margin-top: 206px;
    margin-left: 60px;
    width: 569px;
    height: 73px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 8px;
}

.contacts-side-headline h1 {
    display: flex;
    align-items: center;
    font-weight: 700;
    font-size: 61px;
}

.contacts-side-headline h3 {
    display: flex;
    align-items: center;
    font-weight: 400;
    font-size: 27px;
}

.contacts-headline-seperator {
    height: 59px;
    width: 3px;
    border-radius: 3px;
    background-color: rgba(41, 171, 226, 1);
}

.contacts-headline-seperator-mobile {
    display: none;
}

.contacts-overlay-container {
    transform: translateX(100%);
    opacity: 0;
    transition: transform 0.7s ease-out, opacity 0.7s ease-out;
    display: flex;
    flex-direction: column;
    width: 461px;
    height: 364px;
    margin-top: 120px;
    gap: 21px;
    margin-left: 60px;
}

.contacts-overlay-container.active-side-overlay {
    transform: translateX(0);
    opacity: 1;
    width: 100%;
}

.contacts-overlay-container.hide-side-overlay {
    display: none;
}

.contacts-overlay-container span {
    display: flex;
    font-weight: 400;
    font-size: 20px;
    gap: 59px;
}

.contacts-overlay-header {
    display: flex;
    width: 461px;
    height: 120px;
    gap: 54px;
}

.contacts-overlay-user-profile {
    background-color: #FF7A00;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 47px;
    font-weight: 500;
    width: 120px;
    height: 120px;
    border-radius: 100%;
    border: 3px solid white;
    gap: 10px;
}

.contacts-info-container {
    white-space: nowrap;
    display: flex;
    flex-direction: column;
    width: 287px;
    height: 88px;
    gap: 8px;
}

.contacts-info-headline-container {
    width: 287px;
    height: 56px;
    gap: 5px;
}

.contacts-info-container h3 {
    font-size: 47px;
    font-weight: 500;
}

.contacts-overlay-action-buttons-container {
    display: flex;
    gap: 13px;
}

.contacts-overlay-action-buttons-container p {
    font-weight: 400;
    font-size: 16px;
}

.contacts-overlay-edit-container {
    cursor: pointer;
    display: flex;
    gap: 8px;
}

.contacts-overlay-edit-container:hover {
    color: rgba(41, 171, 226, 1);
}

.contacts-overlay-edit-container img {
    filter: brightness(0) saturate(100%);
}

.contacts-overlay-edit-container:hover img {
    filter: brightness(0) saturate(100%) invert(55%) sepia(95%) saturate(730%) hue-rotate(165deg) brightness(92%) contrast(89%);
}

.contacts-overlay-delete-container {
    cursor: pointer;
    display: flex;
    gap: 8px;
}

.contacts-overlay-delete-container:hover {
    color: rgba(41, 171, 226, 1);
}
/* ... */

